fixed the navbar transformation on mobile and optimized the tobot thumbnail

--- a/style.css
+++ b/style.css
@@ -1063,6 +1063,10 @@ width: 5%;
 
 
   @media screen and (max-width: 600px) {
+    .nav-item:hover{
+        transform: translateY(-19px);
+
+    }
     .line{
         display: none;
     }
